--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,15 +21,16 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  key_enclave: 0.1.3
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  camera: ^0.5.8+5
-  story_view: ^0.12.3
+  cupertino_icons: ^1.0.4
+  camera: ^0.9.4+5
+  story_view: ^0.13.2
 
 dev_dependencies:
   flutter_test:
